# pulsar

./: .gitignore  CLAUDE.md  Install-Winget.ps1  README.md  activate  activate.bat  activate.ps1  activate.sh  activate.vbs  bashrc  install-lazydocker.sh  install-lazygit.sh  install.py  launch.ps1  launch.sh  pulsar-launch  pulsar-launch.bat  pulsar-launch.ps1  pulsar-launch.vbs  pulsar.ps1
.claude/: settings.json
.config/nvim/: lazy-lock.json
.config/pulsar/: packages.toml
config/fzf/: fzf.bash  fzf.ps1
config/lazygit/: state.yml
config/nvim/: init.lua  lazy-lock.json
config/nvim/lua/: plugins.lua
config/uv/: uv-receipt.json
config/wezterm/: wezterm.lua
src/: checkbox_example_rich.py  dashboard.py  downloader.py  github_api_cache.py  package_classes.py  package_installer.py  pulsar.py  pulsar_env.py  pyproject.toml  star_animation.py  uv-like-downloader.py
src/pulsar_cli/: pyproject.toml
src/pulsar_cli/pulsar_cli/: __init__.py  __main__.py  database.py  downloader.py  package_manager.py  platform_detect.py
