[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pulsar-cli"
version = "0.1.0"
description = "Package manager for Pulsar portable development environment"
readme = "../../README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Pulsar Contributors"},
]
dependencies = [
    "typer>=0.9.0",
    "typing-extensions>=4.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.scripts]
pulsar = "pulsar_cli.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["pulsar_cli"]

